<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.meda.shoppinglist.MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="6"
            android:scaleType="fitXY"
            android:src="@drawable/grocery"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$10"
                android:textColor="@color/colorDollar"/>

            <CheckBox
                android:id="@+id/checkBoxPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchased"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

        <Button
            android:id="@+id/btnEdit"
            android:text="Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aef9f4"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete2"
            android:background="#aef9f4"
            android:layout_margin="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnItemDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_details"
        android:background="#aef9f4"
        android:layout_margin="5dp"/>

</LinearLayout>